--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 .container {
-    width: 200px;
+    width: 300px;
     margin: 0 auto;
     }
     
     input {
-    width: 100%;
+    width: 50%;
     padding: 10px;
     border: 1px solid #ccc;
     }
     
     button {
-    width: 100%;
+    margin: 5px;
+    width: 40%;
     padding: 10px;
     background-color: #000;
     color: #fff;
     border: none;
     }
-    
+    .stakecard {
+    margin: 15px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #ccc;
+    width: 100%;
+    }    
